[package]

name = "diverge"
version = "0.0.2"
authors = ["Skyler Lipthay <skyler.lipthay@gmail.com>"]
description = "Extension injection site specification through a simple macro"
readme = "README.md"
keywords = ["injection", "concerns", "macro"]
license = "MIT"
repository = "https://github.com/SkylerLipthay/diverge"
